--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.http.multipart.max-file-size=128MB
 spring.http.multipart.max-request-size=128MB
 server.port=9402
+base=api.openreq.eu
+#base=localhost
