sonarqube code clean WIP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.http.multipart.max-file-size=128MB
 spring.http.multipart.max-request-size=128MB
 server.port=9402
 base=api.openreq.eu
+logging.level.root=INFO
 #base=localhost
