--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,8 @@
 						<param>com.h2database:h2:1.4.196</param>
 						<!-- Apache-2.0 License -->
 						<param>com.google.guava:guava:23.5-jre</param>
+						<param>org.complykit:license-check-maven-plugin:0.5.3:os-check</param>
+						<param>org.hibernate:hibernate-validator:5.1.3.Final</param>
 					</excludes>
 					<blacklist>
 						<param>agpl-3.0</param>
